Fix the animation of the navbar. In the layouts component I added the Navbar and Footer Component, useLocation in Layouts component for 404. In the 404 components I change useLocation to useNavigition wrap in useEffect for change the routes

--- a/src/components/404Page/_404Page.scss
+++ b/src/components/404Page/_404Page.scss
@@ -52,28 +52,23 @@
     display: flex;
     flex-direction: column;
     z-index: 0;
+
+    &:hover {
+      filter: blur(0px);
+    }
     .label404 {
       font-size: 300px;
       font-weight: bold;
       margin-left: 423px;
       margin-top: -34px;
+      padding-bottom: 10px;
       color: $secondary;
-      filter: blur(9px);
-
-      &:hover {
-        filter: blur(0px);
-      }
     }
     .labelContent {
       font-weight: 500;
       margin-left: 444px;
       margin-top: -80px;
       color: $secondary;
-      filter: blur(9px);
-
-      &:hover {
-        filter: blur(0px);
-      }
     }
     .btn-HomePage {
       font-size: 22px;
@@ -88,6 +83,7 @@
       margin-top: 32px;
       text-align: center;
       text-decoration: none;
+      filter: blur(0px);
     }
   }
 }
