--- a/src/components/styles/_variables.scss
+++ b/src/components/styles/_variables.scss
@@ -1,9 +1,9 @@
 // Typography
-$font-title: 'Poppins', serif;
-$font-content: 'Montserrat';
+$font-title: "Poppins", sans-serif;
+$font-content: "Montserrat";
 
 // color
 $primary: #fff;
-$secondary: #EA4FE7;
-$accent: #4CA6E0;
+$secondary: #ea4fe7;
+$accent: #4ca6e0;
 $text-color: #545454;
